--- a/app/src/main/resources/templates/account/accountList.html
+++ b/app/src/main/resources/templates/account/accountList.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link th:href="@{/common/header.css}" rel="stylesheet">
     <title>アカウント覧ページ</title>
 </head>
 <body>
+    <div id="parent" th:include="/common/header"></div>
     <h1>アカウント一覧</h1>
     <table>
         <thead>
