--- a/app/src/main/resources/templates/account/accountList.html
+++ b/app/src/main/resources/templates/account/accountList.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <link th:href="@{/common/header.css}" rel="stylesheet">
-    <title>アカウント覧ページ</title>
+    <title>アカウント一覧ページ</title>
 </head>
 <body>
     <div id="parent" th:include="/common/header"></div>
