--- a/app/src/main/resources/templates/account/accountList.html
+++ b/app/src/main/resources/templates/account/accountList.html
@@ -20,8 +20,8 @@
                 <td th:text="${account.name}"></td>
                 <td th:text="${account.age}"></td>
                 <td>
-                    <!--<a th:href="@{/showFormForUpdate/{id}(id=${product.id})}">詳細</a>
-                    <a th:href="@{/deleteProduct/{id}(id=${product.id})}">削除</a>-->
+                    <a th:href="@{/detail/{id}(id=${account.id})}">詳細</a>
+                    <!-- <a th:href="@{/deleteProduct/{id}(id=${product.id})}">削除</a> -->
                 </td>
             </tr>
         </tbody>
